Made some changes in Step 3 and other grammatical changes

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/reference-field.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/reference-field.mdx
@@ -12,15 +12,16 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-The reference field enables users to link one content model to another. For instance, if you have two content models, **Product** and **Category**.
+The reference field enables users to link one content model to another. For instance, consider two content models, **Product** and **Category**.
 A product may belong to multiple categories. In such a scenario, we create a reference field in the **Product** content model that refers to the **Category** model.
 
 In this tutorial, we will learn how to use reference field.
 As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 We will create another content model **Category**, and give the reference of **Category** in **Product**. 
-We will do this in three steps:
+We will do this in four steps:
 
-- Step 1: Create a **Category** content model and add content entries to it.
+- Step 1: Create a **Category** content model.
+- Step 2: Add content entries to the **Category** content model.
 - Step 2: Update the **Product** content model and add a category reference field to it.
 - Step 3: Create a content entry in the **Product** content model with reference to the **Category** content model.
 
@@ -28,7 +29,7 @@ We will do this in three steps:
 
 We will create a category content model with the following attributes and fields.
 
-If you are not familier with how to create a content model, please follow the [Create Content Model](../essentials/create-content-model) tutorial.
+If you are not familiar with how to create a content model, please follow the [Create Content Model](../essentials/create-content-model) tutorial.
 
 1. Create a content model with the following attributes:
 
@@ -48,7 +49,6 @@ If you are not familier with how to create a content model, please follow the [C
 
 ## Step 2: Create 'Category' content entries
 
-
 1. From the **Side Menu**, Click **Headless CMS** > **Categories**.
 
 2. Click **+ NEW ENTRY**.
@@ -59,7 +59,7 @@ If you are not familier with how to create a content model, please follow the [C
 
 4. Click **SAVE & PUBLISH**.
 
-**Optional**: Similarly, you can create another category content entry with name **Accessories**.
+**Optional**: Similarly, you can create another **Category** content entry with name **Accessories**.
 
 
 ## Step 3: Update 'Product' Content Model
@@ -77,13 +77,13 @@ If you are not familier with how to create a content model, please follow the [C
 
    ✔️ **Field Settings - Reference** screen opens.
 
-5. In the **Label** field, type **Category**.
+5. In the **Label** textbox, type **Category**.
 
 6. In the **Content Models** dropdown, click **Category**.
 
 7. Click the **Use as a list of references** button.
 
-    **Note**: Since a product can belong to multiple categories. Enabling **Use as a list of references** will allow us to associate multiple categories to a product.
+    **Note**: Since a product can belong to multiple categories, enabling **Use as a list of references** will allow us to associate multiple categories to a product.
 
 8. Click **SAVE FIELD**.
 
@@ -93,7 +93,6 @@ If you are not familier with how to create a content model, please follow the [C
 
 
 ## Step 4: Create 'Product' content entry with a reference to 'Category'
-
 
 1. From the **Side Menu**, Click **Headless CMS** > **Products**.
 
