fix: small changes on Theming introduction. (#560)

--- a/src/docs/5.34.x/page-builder/theming/introduction.mdx
+++ b/src/docs/5.34.x/page-builder/theming/introduction.mdx
@@ -17,7 +17,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What You’ll Learn">
 
-- what is the Page Builder theme consist of
+- what does the Page Builder theme consist of
 - what plugins are used in Page Builder theme
 
 </Alert>
@@ -25,7 +25,7 @@ import { Alert } from "@/components/Alert";
 ## Configuration File
 
 The main configuration file for the Page Builder theme is located at: [`apps/theme/pageBuilder/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/index.ts).
-This file exports a list of Page Builder theme plugins, and that's what you later import in your [**website**](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts#L6) app and then register as a plugin.
+This file exports a list of Page Builder theme plugins, and that's what you later import in your [**website**](https://github.com/webiny/webiny-js/blob/next/apps/website/src/plugins/index.ts#L7) app and then register as a plugin.
 
 The configuration file is structured in several sections like so:
 
@@ -33,14 +33,14 @@ The configuration file is structured in several sections like so:
 [
     // Main theme plugin containing the theme definition.
     {
-        name: "pb-theme-default"            // Name of your theme.
-        type: `pb-theme`                    // Plugin type.
+        name: "pb-theme-default",           // Name of your theme.
+        type: `pb-theme`,                   // Plugin type.
         theme: {}                           // Theme definition.
     } as PbThemePlugin,
 
     // Register a layout ... you can register multiple layouts inside a single theme.
     {
-        name: "pb-page-layout-static"       // Name of the page layout.
+        name: "pb-page-layout-static",      // Name of the page layout.
         type: "pb-page-layout",             // Plugin type.
         layout: {}                          // Layout definition.
     } as PbPageLayoutPlugin
