fix: correct import path

--- a/src/docs/5.29.x/page-builder/extending/extend-page-settings.mdx
+++ b/src/docs/5.29.x/page-builder/extending/extend-page-settings.mdx
@@ -162,7 +162,7 @@ And then, make sure to import your new UI plugin:
 
 ```js apps/admin/src/plugins/pageBuilder/editorPlugins.tsx
 //...
-import pageSettings from "./pageSettings";
+import pageSettings from "./../pageSettings";
 
 export default [
   // Page settings
