refactor: remove how to add custom plugin section

--- a/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
+++ b/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add custom button callback handler
+title: Add Custom Button Callback Handler
 description: How to create a custom callback handler for button element
 ---
 
@@ -9,7 +9,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info" title="Can I Use This?">
 
-This feature is available since Webiny **v5.29.0**.
+This feature is available since Webiny **v5.19.0**.
 
 </Alert>
 
@@ -30,75 +30,26 @@ By default, the **Button** element comes with 2 workings action types out of the
 
 A third option is available, **Click handler**: this need a bit of work in order to function.
 
-In this tutorial, you will learn how we can add a custom button click handler, available to be used within the Page Builder.
-
+In this tutorial, you will learn how to add a custom button click handler, available to be used within the Page Builder.
 
 ## Register a new plugin
 
-We need to register a new plugin for Page Builder and include it inside both `admin` and `website` packages.
+You need to register a new plugin for Page Builder and include it inside both `admin` and `website` packages.
 
-For this reason, we advise you to follow this tutorial and create a new `plugins` workspace.
+Those are the files within you need to register your plugin:
 
-Head over the `apps/plugins` folder and register the new plugin and the related folder `button-click-handlers`.
+- **Page Builder editor** plugins: `apps/admin/src/plugins/pageBuilder/editor.ts`
+- **Page Builder render** plugins: `apps/admin/src/plugins/pageBuilder/render.ts`
+- **Website Page Builder** plugins: `apps/website/src/plugins/pageBuilder.ts`
 
-Save the `package.json` file:
+<Alert type="info">
 
-```json apps/plugins/button-click-handlers/package.json
-{
-  "name": "@custom/button-click-handlers"
-}
-```
+If you are not familiar with how plugins work, read the following [article](../../core-development-concepts/basics/importing-plugins.mdx).
 
-Create the `editor.ts` file, which is going to contain the button handlers:
-
-```ts apps/plugins/button-click-handlers/editor.ts
-// This is where we are going to register all our handlers
-export const buttonClickHandlers = [
-  ...
-];
-```
-
-Now, open the `apps/admin/src/plugins/pageBuilder/` folder where all the plugins related to the Page Builder app are located.
-
-As you can see there are two core sets of plugins:
-
-1. `editor` plugins: needed for Page Builder editor;
-2. `render` plugins: needed for Page Builder page preview and to render the actual page in the Website app.
-
-Import the click handlers code into both files:
-
-```ts apps/admin/src/plugins/pageBuilder/editor.ts
-...
-// Custom Page Builder plugins
-import { buttonClickHandlers } from "@custom/button-click-handlers/editor";
-
-export default [
-    
-  ...
-  // Custom Page Builder plugins
-  ...buttonClickHandlers
-];
-```
-
-At the end, head over to the `apps/website/src/plugins/pageBuilder.ts` file where all the plugins related to the Page Builder app are located.
-
-Import the click handlers code into the file:
-
-```ts apps/website/src/plugins/pageBuilder.ts
-...
-// Custom Page Builder plugins
-import { buttonClickHandlers } from "@custom/button-click-handlers/editor";
-
-export default [
-    
-  ...
-  // Custom Page Builder plugins
-  ...buttonClickHandlers
-];
-```
+</Alert>
 
 ## Register a button handler
-Now, we go back to our custom plugin file to register a new button handler. 
+Now, go back to our custom plugin file to register a new button handler. 
 
 This comes pretty easy: you just need to define a new plugin object with `type: pb-page-element-button-click-handler`, see the example here below:
 
@@ -128,7 +79,7 @@ As you can see, the configuration object has the following properties:
 ### Custom button handler with variables
 You might need to allow your admin user to set one or more custom variables values and pass them to the handler. 
 
-In this case, we just need to add a couple of more properties to our handler configuration object: 
+In this case, you just need to add a couple of more properties to our handler configuration object: 
 
 ```ts apps/plugins/button-click-handlers/editor.ts
 import { PbButtonElementClickHandlerPlugin } from "@webiny/app-page-builder/types";
@@ -153,7 +104,7 @@ export const buttonClickHandlers = [
 ]
 ```
 
-We are adding the following property:
+You are adding the following property:
 
 - `variables`: a list of allowed variables with name, label and default values. Those will be received by your custom handler.
 
