refactor: remove how to add custom plugin section

--- a/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
+++ b/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
@@ -44,7 +44,7 @@ Those are the files within you need to register your plugin:
 
 <Alert type="info">
 
-If you are not familiar with how plugins work, read the following [article](../../core-development-concepts/basics/importing-plugins.mdx).
+If you are not familiar with how plugins work, read the following [article](../../core-development-concepts/basics/importing-plugins).
 
 </Alert>
 
