feat: add "Use Existing Amazon VPC" article (EE)

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -16,7 +16,7 @@ description: Learn how to configure a Theme Manager in your Webiny project
 
 When a Webiny project is deployed in [production mode](/docs/{version}/architecture/deployment-modes/introduction), it is deployed into a new [Amazon Virtual Private Cloud (Amazon VPC)](https://aws.amazon.com/vpc/), with already configured public and private subnets, security groups, and so on.
 
-And although this may work for multiple types of users and projects, when it comes to enterprise organizations, often times a fully configured Amazon VPC is already in place and there's no need to create a new one. Deploying a Webiny project into the existing Amazon VPC is a better choice.
+And although this may work for multiple types of users and projects, when it comes to enterprise organizations, often times a fully configured Amazon VPC is already in place and there's no need to create a new one. In those cases, deploying a Webiny project into the existing Amazon VPC makes more sense.
 
 In this article, we describe how enterprise organizations can deploy their Webiny project into an existing Amazon VPC.
 
