feat: add "Use Existing Amazon VPC" article (EE)

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -33,7 +33,13 @@ For all applications, changes will be applied in application’s respective `web
 
 Let’s take a look at the changes that need to be made.
 
-<Alert type={"info"}>elastic sarch ssumed</Alert>
+<Alert type={"info"}>
+
+The following examples were created using a brand new Webiny project, initialized with the [Amazon DynamoDB + Amazon ElasticSearch database setup](/docs/{version}/architecture/introduction#different-database-setups). That's why we'll encounter the `elasticSearch` flag, set to `true`. 
+  
+  Projects that are using the Amazon DynamoDB setup don't have this parameter present in Core and API application's `webiny.application.ts` configuration file.
+
+</Alert>
 
 ### 1. Core (`apps/core`)
 
@@ -51,7 +57,7 @@ The Core application's `webiny.application.ts` file should look like the followi
 
 export default createCoreApp({
     pulumiResourceNamePrefix: "wby-",
-    elasticSearch: true,
+    elasticSearch: true, // Only present in Amazon DynamoDB + Amazon ElasticSearch database setup.
 +   vpc: {
 +       useExistingVpc: {
 +           elasticSearchDomainVpcConfig: {
@@ -99,7 +105,7 @@ The API application's `webiny.application.ts` file should look like the followin
 
 export default createApiApp({
     pulumiResourceNamePrefix: "wby-",
-    elasticSearch: true,
+    elasticSearch: true,  // Only present in Amazon DynamoDB + Amazon ElasticSearch database setup.
 +   vpc: {
 +       useExistingVpc: {
 +           lambdaFunctionsVpcConfig: {
