feat: add "Use Existing Amazon VPC" article (EE)

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -1,14 +1,13 @@
 ---
 title: Use Existing Amazon VPC
-description: Learn how to configure a Theme Manager in your Webiny project
+description: Learn how to deploy a Webiny project into an existing Amazon Virtual Private Cloud (Amazon VPC).
 ---
 
 <CanIUseThis enterprise={true} since={"5.34.6"} />
 
 <WhatYouWillLearn>
 
-- how to enable theme management in the existing Webiny project
-- how to assign themes to individual tenants
+- how to deploy a Webiny project into an existing Amazon Virtual Private Cloud (Amazon VPC)
 
 </WhatYouWillLearn>
 
