feat: add "Use Existing Amazon VPC" article (EE)

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -193,7 +193,7 @@ Users can use [Amazon VPC endpoints](https://docs.aws.amazon.com/whitepapers/lat
 1. DynamoDB (gateway)
 2. S3 (gateway)
 3. SQS (interface)
-4. EventBridge (interface**)**
+4. EventBridge (interface)
 
 Note that VPC endpoints are configured within the provided existing Amazon VPC. This is mainly because organizations have full control of their environment, and are able to do this. 
 
