fix: for now, use the deployment mode instead of the word stack
The former is already used in a dedicated doc.

--- a/src/docs/5.34.x/overview/features/security.mdx
+++ b/src/docs/5.34.x/overview/features/security.mdx
@@ -49,11 +49,11 @@ The serverless services Webiny uses as part of its architecture are fault-tolera
 
 With Webiny there are zero servers you need to manage, reducing the risk of a security breach due to misconfiguration. Serverless services are tested by the cloud provider against all forms of attacks across millions of customers, giving your confidence in their security. Serverless services in general reduce the potential attack vectors that can be used against your application.
 
-Webiny ships with 2 infrastructure stacks by default, a development one and a production one.
+Webiny ships with two deployment modes by default, a development one and a production one.
 
-<Alert type="warning" title="Use the right stack">
+<Alert type="warning" title="Use the right deployment mode">
 
-We highly recommend that you use the `production` stack for all your projects running production traffic. [Learn more about the stacks.](../../architecture/deployment-modes/introduction)
+We highly recommend that you use the production deployment mode for all your projects running production traffic. [Learn more about the deployment modes.](../../architecture/deployment-modes/introduction)
 
 </Alert>
 
