--- a/src/docs/5.34.x/overview/features/security.mdx
+++ b/src/docs/5.34.x/overview/features/security.mdx
@@ -59,15 +59,21 @@ We highly recommend that you use the production deployment mode for all your pro
 
 The production stack by default is deployed inside a private VPC preventing direct access to resources like DynamoDB and the Elasticsearch database. Keeping your data safe.
 
-### VPC & VPC Endpoints
+### Deploying Into Amazon Virtual Private Cloud (Amazon VPC)
 
-Webiny in its Enterprise tier, offers an additional infrastructure configuration, one that further hardens the security posture and keeps the communication between specific services within the private network without exposing any of its data or communication to the public internet. 
+In its Enterprise tier, Webiny offers an additional infrastructure configuration, one that further hardens the security posture and keeps the communication between specific services within the private network without exposing any of its data or communication to the public internet. 
 
-Webiny Enterprise customers can deploy Webiny within their existing VPC that they already manage using their existing toolset. 
+Webiny Enterprise customers can deploy a Webiny project into their existing Amazon VPC that they already manage using their existing toolset. 
 
-In addition to deploying Webiny inside a VPC, VPC endpoints can be used with services like DynamoDB (gateway endpoint), S3 (gateway endpoint), SQS (interface endpoint) and EventBridge (interface endpoint). 
+In addition to deploying Webiny inside an Amazon VPC, Amazon VPC endpoints can be used with services like Amazon DynamoDB, Amazon S3, Amazon SQS and Amazon EventBridge. 
 
-As many organizations already have a securely configured VPC and VPC endpoints, Webiny can be configured to utilize those existing resources. If the preference is to deploy Webiny into an isolated AWS account, but still utilize the VPC and VPC endpoints, that configuration is also available. 
+As many organizations already have a securely configured Amazon VPC and Amazon VPC endpoints, a Webiny project can be configured to utilize those existing resources. If the preference is to deploy Webiny into an isolated AWS account, but still utilize the VPC and VPC endpoints, that configuration is also available. 
+
+<Alert type={"info"}>
+
+  To learn more about deploying your Webiny project into an existing Amazon VPC, check out the [Use Existing Amazon VPC](/docs/{version}/enterprise/use-existing-amazon-vpc) article.
+
+</Alert>
 
 Additional security improvements you can make to your project:
 
