feat: add "Use Existing Amazon VPC" article (EE)

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -34,9 +34,9 @@ Let’s take a look at the changes that need to be made.
 
 <Alert type={"info"}>
 
-The following examples were created using a brand new Webiny project, initialized with the [Amazon DynamoDB + Amazon ElasticSearch database setup](/docs/{version}/architecture/introduction#different-database-setups). That's why we'll encounter the `elasticSearch` flag, set to `true`. 
+The following examples were created using a brand new Webiny project, initialized with the [Amazon DynamoDB + Amazon ElasticSearch database setup](/docs/{version}/architecture/introduction#different-database-setups). That's why we'll encounter the `elasticSearch` flag (set to `true`) in Core and API applications' `webiny.application.ts` configuration files.  
   
-  Projects that are using the Amazon DynamoDB setup don't have this parameter present in Core and API application's `webiny.application.ts` configuration file.
+Projects that are using the Amazon DynamoDB setup don't have this parameter set.
 
 </Alert>
 
